create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3467,72 +3467,72 @@ body {
   letter-spacing: .5rem;
   color: #ffffff;
 }
-.cid-qTGoSI8YQZ {
+.cid-qTGX063NDZ {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-qTGoSI8YQZ *:focus {
+.cid-qTGX063NDZ *:focus {
   outline: none;
 }
-.cid-qTGoSI8YQZ .input-wrap {
+.cid-qTGX063NDZ .input-wrap {
   padding-bottom: 1rem;
 }
-.cid-qTGoSI8YQZ input,
-.cid-qTGoSI8YQZ textarea {
+.cid-qTGX063NDZ input,
+.cid-qTGX063NDZ textarea {
   width: 100%;
   background: #efefef;
   border-radius: 0;
   border: none;
 }
-.cid-qTGoSI8YQZ input {
+.cid-qTGX063NDZ input {
   padding: .5rem;
 }
-.cid-qTGoSI8YQZ ::-webkit-input-placeholder {
+.cid-qTGX063NDZ ::-webkit-input-placeholder {
   color: #000000;
 }
-.cid-qTGoSI8YQZ ::-moz-placeholder {
+.cid-qTGX063NDZ ::-moz-placeholder {
   color: #000000;
 }
-.cid-qTGoSI8YQZ :-ms-input-placeholder {
+.cid-qTGX063NDZ :-ms-input-placeholder {
   color: #000000;
 }
-.cid-qTGoSI8YQZ :-moz-placeholder {
+.cid-qTGX063NDZ :-moz-placeholder {
   color: #000000;
 }
-.cid-qTGoSI8YQZ .soc-item {
+.cid-qTGX063NDZ .soc-item {
   display: inline-block;
   margin: 0 .1rem .2rem .1rem;
   padding: 10px 11px 0 11px;
   border: 2px solid #69b9d0;
   border-radius: 50%;
 }
-.cid-qTGoSI8YQZ .soc-item:hover {
+.cid-qTGX063NDZ .soc-item:hover {
   opacity: .5;
 }
-.cid-qTGoSI8YQZ .soc-item .socicon {
+.cid-qTGX063NDZ .soc-item .socicon {
   font-size: 1.5rem;
   color: #69b9d0;
 }
-.cid-qTGoSI8YQZ .days-column,
-.cid-qTGoSI8YQZ .hours-column {
+.cid-qTGX063NDZ .days-column,
+.cid-qTGX063NDZ .hours-column {
   display: inline-block;
 }
-.cid-qTGoSI8YQZ .days-column span,
-.cid-qTGoSI8YQZ .hours-column span {
+.cid-qTGX063NDZ .days-column span,
+.cid-qTGX063NDZ .hours-column span {
   display: block;
 }
-.cid-qTGoSI8YQZ .input-group-btn {
+.cid-qTGX063NDZ .input-group-btn {
   display: block;
 }
 @media (max-width: 767px) {
-  .cid-qTGoSI8YQZ .days-column {
+  .cid-qTGX063NDZ .days-column {
     padding-right: 0 !important;
   }
-  .cid-qTGoSI8YQZ .hours-column {
+  .cid-qTGX063NDZ .hours-column {
     max-width: 50% !important;
   }
-  .cid-qTGoSI8YQZ .opening-hours {
+  .cid-qTGX063NDZ .opening-hours {
     padding-bottom: 48px !important;
   }
 }
